Prevent content shift due to vertical scroll bar
When the vertical scroll bar appears, the entire content is shifted left
by the amount corresponding to the width of that scroll bar.

This is fixed by assigning the HTML element a width corresponding to the
entire width of the viewport ignoring the scroll bar width, and elements
are shrunk a bit to fit even when the scroll bar appears.

--- a/index.css
+++ b/index.css
@@ -90,7 +90,7 @@
 }
 
 html {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     margin: 0;
     padding: 0;
@@ -106,6 +106,7 @@ body {
     padding-left: max(env(safe-area-inset-left, 1em), 1em);
     color: var(--fg);
     background-color: var(--bg);
+    overflow-x: hidden;
 }
 
 p {
@@ -213,6 +214,11 @@ button:active {
 #dropzone > p {
     text-align: center;
     pointer-events: none;
+}
+
+#jobs {
+    max-width: 90vw;
+    margin: 0 auto;
 }
 
 .job {
